# mAIke-oss

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  mAIke_test.sh  pyproject.toml
docs/: ARCHITECTURE.md
maike/: __init__.py  cli.py  config.py  constants.py  models_default.yaml  repl.py  utils.py
maike/agents/: __init__.py  advisor.py  agent_commands.py  agent_resolver.py  classifier.py  constraints.py  core.py  delegate.py  helpers.py  init_helper.py  knowledge.py  react.py  skill.py  stuck_detectors.py  team_commands.py  team_executor.py  team_resolver.py  trajectory_auditor.py
maike/atoms/: __init__.py  agent.py  artifact.py  blueprint.py  context.py  llm.py  tool.py
maike/commands/: __init__.py  builtins.py  registry.py
maike/context/: __init__.py  budget.py  cadence.py  collapse.py  compaction_prompt.py  compressor.py  convergence.py  labels.py  policies.py  recovery.py  summarizer.py  tags.py  telemetry.py  tokenizer.py  workspace.py
maike/cost/: __init__.py  tracker.py
maike/eval/: __init__.py  adapters.py  agentic_metrics.py  baselines.py  case_protocol.py  contracts.py  metrics.py  reporting.py  runner.py  swebench.py  swebench_runner.py
maike/gateway/: __init__.py  llm_gateway.py  memory_gateway.py  providers.py  structured.py
maike/intelligence/: __init__.py  code_index.py  embeddings.py  hot_context.py  import_graph.py  indexer.py  models.py
maike/memory/: __init__.py  automemory.py  learning.py  longterm.py  session.py  (+6 more)
scripts/: analyze_session.py  run_live_workflow_dynamic.py  run_live_workflows.py  run_production_scenarios.py
(+226 files in other folders)
